# ModsUpdater

./: Cargo.toml  README.md  modrinth-api-reference.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  scanner.rs  updater.rs
crates/core/src/api/: mod.rs  models.rs
crates/gui/: Cargo.toml
crates/gui/src/: main.rs
