[workspace]
members = ["crates/core", "crates/cli", "crates/gui"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
toml = "0.8"
tempfile = "3"
indicatif = "0.17"
clap = { version = "4", features = ["derive"] }
eframe = "0.31"
egui = "0.31"
rfd = "0.15"
