[package]
name = "modsupdater-cli"
version = "0.1.0"
edition = "2021"
description = "CLI frontend for Modrinth mod updater"

[[bin]]
name = "modsupdater-v0_1_0"
path = "src/main.rs"

[dependencies]
modsupdater-core = { path = "../core" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
serde_json = { workspace = true }
