[package]
name = "modrinth-updater-core"
version = "0.1.0"
edition = "2021"
description = "Core library for Modrinth mod updater"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
sha1 = "0.10"
hex = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
futures-util = "0.3"
bytes = "1"
