[package]
name = "modsupdater-gui"
version = "0.1.0"
edition = "2021"
description = "GUI frontend for Modrinth mod updater (egui/eframe)"

[[bin]]
name = "modsupdater-gui-v0_1_0"
path = "src/main.rs"

[dependencies]
modsupdater-core = { path = "../core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
rfd = { workspace = true }
chrono = { workspace = true }
